force-app/main/default/objects/LLC_BI__ChangeMemoConfigProfile__c/LLC_BI__ChangeMemoConfigProfile__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings for the change memo triggers (movemod) so it uses proper doc manager IDs.</description>
    <label>Bankr - Change Memo Profile</label>
</CustomObject>