force-app/main/default/objects/LLC_BI__ChangeMemoConfigProfile__c/fields/LLC_BI__DocTabId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DocTabId__c</fullName>
    <description>The ID of the doc tab to move the file to (IE: Loan).</description>
    <label>DocTab ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>