force-app/main/default/objects/LLC_BI__ChangeMemoConfigProfile__c/fields/LLC_BI__DocTypeId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DocTypeId__c</fullName>
    <description>This field and custom setting is currently not being used.</description>
    <label>DocType ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>