force-app/main/default/objects/LLC_BI__ChangeMemoConfigProfile__c/fields/LLC_BI__Enabled__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enabled__c</fullName>
    <description>We can enable or disable this feature.
Yes | No</description>
    <inlineHelpText>Yes | No</inlineHelpText>
    <label>Enabled</label>
    <length>10</length>
    <type>Text</type>
</CustomField>